--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,14 +17,21 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^5.0.2",
+    "jest": "^28.0.3",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^27.5.0",
     "@types/node": "^17.0.30",
+    "babel-jest": "^28.0.3",
+    "ts-jest": "^28.0.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
