--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "menu-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/main.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -15,10 +15,13 @@
     "-": "^0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint": "^8.14.0",
     "express": "^4.18.0",
+    "global": "^4.4.0",
     "helmet": "^5.0.2",
     "jest": "^28.0.3",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "supertest": "^6.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -30,6 +33,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.30",
+    "@types/supertest": "^2.0.12",
     "babel-jest": "^28.0.3",
     "ts-jest": "^28.0.1",
     "ts-node-dev": "^1.1.8",
