--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "dotenv": "^16.0.0",
     "eslint": "^8.14.0",
     "express": "^4.18.0",
-    "global": "^4.4.0",
     "helmet": "^5.0.2",
     "jest": "^28.0.3",
     "mysql2": "^2.3.3",
+    "prettier": "^2.6.2",
     "supertest": "^6.2.3"
   },
   "devDependencies": {
